@@ -2,6 +2,11 @@ webscaff changelog
 ==================
 
 
+Unreleased
+----------
+* Enabled sys.apt.upgrade command.
+
+
 v0.3.1 [2021-01-15]
 -------------------
 * Fix 'run.initialize' command permission error.
